# python-serial-pc-control

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  package.yml  tests.yml
package/: cli.spec
serial_pc_control/: __init__.py  __main__.py  cli.py  cmds_keyboard.py  cmds_mouse.py  device_serial.py  process_cmds.py  protocol.py
tests/: test_serial_pc_control.py
