[build-system]
requires = ["setuptools", "poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "serial-pc-control"
version = "0.1.0"
description = "Control your PC keyboard and mouse via serial messages."
authors = ["carlosperate <carlosperate@embeddedlog.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyserial = "^3.4"
pyautogui = "^0.9.48"
typer = "^0.0.8"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
# Packaging, macholib needed by PyInstaller in macOS
pyinstaller = "^3.6"
macholib = "^1.8; platform_system == 'Darwin'"
# Linting
mypy = "^0.761"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.4.2"
flake8-docstrings = "^1.5.0"
# Testing
pytest = "^5.2"

[tool.black]
line-length = 79
target-version = ['py36']
